--- a/imports/ui/interface/app/header/main.html
+++ b/imports/ui/interface/app/header/main.html
@@ -8,7 +8,8 @@
                     <ol class="breadcrumb m-0 float-left">
                       <li class="breadcrumb-item"><a href="#">Myproject</a></li>
                       <li class="breadcrumb-item"><a href="#">Mypage</a></li>
-                      <li class="breadcrumb-item active">CurrentPage</li>
+                      <li class="breadcrumb-item"><a href="#">CurrentPage</a></li>
+                      <li class="breadcrumb-item active">index.html</li>
                     </ol>
                     <button class="icon ctm-add float-right p-0"></button>
                     <div class="clearfix"></div>
